--- a/ocd-secret/values.yaml
+++ b/ocd-secret/values.yaml
@@ -2,5 +2,5 @@
 name: test
 # env_vars: The keys and values to make env vars
 env_vars: 
-#  - key: APP_NAME
-#    value: BackOffice
+  - key: APP_NAME
+    value: BackOffice
