support supplying scmsecret data #1

--- a/ocd-secret/templates/secret-env.yaml
+++ b/ocd-secret/templates/secret-env.yaml
@@ -2,7 +2,15 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.name | quote }}
+{{- if .Values.env_vars }}
 stringData:
   {{- range .Values.env_vars }}
   {{ .key }}: {{ .value  | quote }}
   {{- end }}
+{{- else }}
+data:
+  {{- range .Values.data }}
+  {{ .key }}: >- 
+    {{ .value  }}
+  {{- end }} 
+{{- end }}
