make name required and do not supply a default

--- a/ocd-secret/templates/secret-env.yaml
+++ b/ocd-secret/templates/secret-env.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.name | quote }}
+  name: {{ required "you must supply a name" .Values.name | quote }}
 {{- if .Values.env_vars }}
 stringData:
   {{- range .Values.env_vars }}
