--- a/ocd-secret/values.yaml
+++ b/ocd-secret/values.yaml
@@ -1,5 +1,5 @@
 # name: The name assigned to the secret
-name: test
+#name: test
 #
 # Either supploy "env_vars" as an array of key+value or supply base64 encoded "data" such as a base64 encoded private key to be a scm-secret 
 #
